Fix word-wrap

--- a/stylesheets/cats.css
+++ b/stylesheets/cats.css
@@ -84,6 +84,7 @@
   padding: 3px;
   box-sizing: border-box;
   overflow: scroll;
+  word-wrap: break-word;
 }
 
 .fact-wrapper > h5 {
